--- a/packages/i18n/src/app/en.json
+++ b/packages/i18n/src/app/en.json
@@ -751,6 +751,10 @@
     "defaultMessage": "Provide more details",
     "description": "Company profile form - Title"
   },
+  "KmFeNl": {
+    "defaultMessage": "Invite Friends",
+    "description": "Title of the screen where the user can invite friends to the app"
+  },
   "L0l2Pm": {
     "defaultMessage": "Slide to change the height",
     "description": "Hint of the height slider in Line Divider edition"
@@ -834,6 +838,10 @@
   "Mlk+KE": {
     "defaultMessage": "Activity",
     "description": "NewProfile Name Company Screen - Label Activity textinput"
+  },
+  "MnNB3+": {
+    "defaultMessage": "I'm using Azzapp",
+    "description": "Invite subject to share with friends"
   },
   "MuonO2": {
     "defaultMessage": "Loading error",
@@ -1183,6 +1191,10 @@
     "defaultMessage": "Hide",
     "description": "Accessibility label for the hide button in the profile edition screen"
   },
+  "XPOD2g": {
+    "defaultMessage": "Invite friends",
+    "description": "Invite friends to join the app"
+  },
   "XR2SgB": {
     "defaultMessage": "Following",
     "description": "Title of the screen listing followed profiles"
@@ -1194,6 +1206,10 @@
   "XmCDkN": {
     "defaultMessage": "Mobile",
     "description": "Mobile view mode title in web card preview"
+  },
+  "Y9Wn80": {
+    "defaultMessage": "Hey, I’m using Azzapp as {userName}. Install the app to subscribe to my photos and videos. {url}",
+    "description": "Invite message to share with friends"
   },
   "YJRxy5": {
     "defaultMessage": "Subtitle",
@@ -1235,9 +1251,17 @@
     "defaultMessage": "Change account",
     "description": "Change account modal title"
   },
+  "ZQq/vT": {
+    "defaultMessage": "Invite your friends to join Azzapp !",
+    "description": "Invite friends to join the app subtitle"
+  },
   "ZUFp4g": {
     "defaultMessage": "Edit Margins",
     "description": "PhotoWithTextAndTitle bottom menu label for Margins tab"
+  },
+  "ZYfUrZ": {
+    "defaultMessage": "Invite with sms",
+    "description": "Invite with a sms"
   },
   "ZZvty9": {
     "defaultMessage": "Done",
@@ -1342,6 +1366,10 @@
   "bO/TfG": {
     "defaultMessage": "Privacy Policy",
     "description": "Signup Screen - Privacy Policy Hyperlink Clickable label"
+  },
+  "bv6Xu2": {
+    "defaultMessage": "Invite with Whatsapp",
+    "description": "Invite with Whatsapp button"
   },
   "bxkdJ/": {
     "defaultMessage": "Don't have an account?",
@@ -1559,6 +1587,10 @@
     "defaultMessage": "Allow Azzapp to access your microphone",
     "description": "Camera authorization screen title for microphobe permission"
   },
+  "hgtV7c": {
+    "defaultMessage": "Invite friends via ...",
+    "description": "Invite friends through other apps"
+  },
   "hnj8Qa": {
     "defaultMessage": "Text alignment",
     "description": "Label of the text alignment button"
@@ -1762,6 +1794,10 @@
   "mj17hv": {
     "defaultMessage": "Background",
     "description": "Label of Background tab in cover edition"
+  },
+  "mvJfB5": {
+    "defaultMessage": "Invite via email",
+    "description": "Invite with an email"
   },
   "n38uGy": {
     "defaultMessage": "Top Color",
